src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>